--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,7 @@ span.navbar-text {
     align-items: center;
 }
 .social-icon {
+    margin-top: 25px;
     display: inline-block;
     margin-left: 14px;
 }
@@ -180,6 +181,7 @@ span.navbar-text {
 }
 .navbar-text button:hover::before {
 	content: "";
+  color: #121212;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -552,7 +554,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #121212;
   padding: 85px 125px;
   margin-bottom: 80px;
-  margin-top: -122px;
+  margin-top: -200px;
 }
 .newsletter-bx h3 {
   font-weight: 700;
